@@ -1,7 +1,11 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-10-22)
+ * Reorganized the layout of Preferences->Subtitles.
+
 (2007-10-21)
  * Now the aspect ratio settings should work when using the mplayer own window.
+   Note: the option "Autodetect" may not work correctly in this case.
 
 (2007-10-19)
  * Updated the Polish translation.
